--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@reach/router": "^1.2.1",
     "date-fns": "^1.30.1",
     "dom-form-serializer": "^1.0.7",
+    "eslint-plugin-flowtype": "^4.3.0",
     "gatsby": "^2.0.97",
     "gatsby-image": "^2.0.27",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-google-tagmanager": "^2.1.4",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cms": "^4.1.6",
+    "gatsby-plugin-netlify-cms": "^3.0.17",
     "gatsby-plugin-nprogress": "^2.0.7",
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-postcss": "^2.0.2",
@@ -24,7 +26,6 @@
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-plugin-sitemap": "^2.0.4",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-remark-responsive-iframe": "^2.0.8",
