--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,6 +22,63 @@ collections: # A list of collections the CMS should be able to edit
     editor:
       preview: true
     files:
+
+      - file: 'content/pages/home.md'
+        label: 'Accueil'
+        name: 'home-page'
+        fields:
+          - {
+              label: Template,
+              name: template,
+              widget: hidden,
+              default: HomePage,
+            }
+          - { label: Slug, name: slug, widget: hidden, default: '' }
+          - { label: Title, name: title, widget: hidden }
+          - { label: Featured Image, name: featuredImage, widget: hidden }
+          - { label: Subtitle, name: subtitle, widget: hidden }
+          - { label: Vidéo accueil titre, name: videoTitle, widget: string }
+          - { label: Vidéo accueil, name: video, widget: file }
+          - { label: Vidéo snapshot, name: videoPoster, widget: image }
+          - { label: Body, name: body, widget: markdown }
+          - { label: Titre section 1, name: title1, widget: string }
+          - { label: Image parallax 1, name: parallax1, widget: image }
+          - { label: Texte section 1, name: section1, widget: markdown }
+          - { label: Titre section 2, name: title2, widget: string }
+          - { label: Image parallax 2, name: parallax2, widget: image }
+          - { label: Texte section 2, name: section2, widget: markdown }
+          - { label: Titre section 3, name: title3, widget: string }
+          - { label: Image parallax 3, name: parallax3, widget: image }
+          - { label: Texte section 3, name: section3, widget: markdown }
+          - { label: Titre section 4, name: title4, widget: string }
+          - { label: Image parallax 4, name: parallax4, widget: image }
+          - { label: Texte section 4, name: section4, widget: markdown }
+          - { label: Titre section 5, name: title5, widget: string }
+          - { label: Image parallax 5, name: parallax5, widget: image }
+          - { label: Texte section 5, name: section5, widget: markdown }
+          - { label: Titre section 6, name: title6, widget: string }
+          - { label: Image parallax 6, name: parallax6, widget: image }
+          - { label: Texte section 6, name: section6, widget: markdown }
+          - { label: Titre section 7, name: title7, widget: string }
+          - { label: Image parallax 7, name: parallax7, widget: image }
+          - { label: Texte section 7, name: section7, widget: markdown }
+          
+      - file: 'content/pages/moi.md'
+        label: 'Présentation'
+        name: 'presentation-page'
+        fields:
+          - {
+              label: Template,
+              name: template,
+              widget: hidden,
+              default: DefaultPage,
+            }
+          - { label: Slug, name: slug, widget: hidden, default: '' }
+          - { label: Title, name: title, widget: string }
+          - { label: Featured Image, name: featuredImage, widget: image }
+          - { label: Subtitle, name: subtitle, widget: hidden }
+          - { label: Body, name: body, widget: markdown }
+          
       - file: 'content/pages/contact.md'
         label: 'Contact Page'
         name: 'contact-page'
@@ -112,110 +169,6 @@ collections: # A list of collections the CMS should be able to edit
           - { label: Title, name: title, widget: string }
           - { label: Featured Image, name: featuredImage, widget: image }
           - { label: Subtitle, name: subtitle, widget: markdown }
-          - label: 'Meta'
-            required: false
-            name: 'meta'
-            widget: 'object'
-            fields:
-              - { label: Title, name: title, widget: string, required: false }
-              - {
-                  label: Description,
-                  name: description,
-                  widget: text,
-                  required: false,
-                }
-              - {
-                  label: Canonical Link,
-                  name: canonicalLink,
-                  widget: string,
-                  required: false,
-                }
-              - {
-                  label: Noindex,
-                  name: noindex,
-                  widget: boolean,
-                  required: false,
-                }
-
-      - file: 'content/pages/componets.md'
-        label: 'Componets Page'
-        name: 'componets-page'
-        fields:
-          - {
-              label: Template,
-              name: template,
-              widget: hidden,
-              default: ComponetsPage,
-            }
-          - { label: Slug, name: slug, widget: hidden, default: 'componets' }
-          - { label: Title, name: title, widget: string }
-          - { label: Featured Images, name: featuredImage, widget: image }
-          - { label: Subtitle, name: subtitle, widget: markdown }
-          - { label: Section 1, name: section1, widget: markdown }
-          - { label: Section 2, name: section2, widget: markdown }
-          - { name: video, label: video, widget: file }
-          - { name: videoPoster, label: videoPoster, widget: image }
-          - { label: videoTitle, name: videoTitle, widget: string }
-          - label: 'accordion'
-            name: 'accordion'
-            widget: 'list'
-            fields:
-              - { name: title, label: title, widget: string, default: '' }
-              - { name: description, label: description, widget: string }
-          - label: 'Gallery'
-            name: 'gallery'
-            widget: 'list'
-            fields:
-              - { name: image, label: Image, widget: image }
-              - { name: alt, label: Alt, widget: string }
-              - { name: title, label: Title, widget: string, required: false }
-          - label: 'Meta'
-            required: false
-            name: 'meta'
-            widget: 'object'
-            fields:
-              - { label: Title, name: title, widget: string, required: false }
-              - {
-                  label: Description,
-                  name: description,
-                  widget: text,
-                  required: false,
-                }
-              - {
-                  label: Canonical Link,
-                  name: canonicalLink,
-                  widget: string,
-                  required: false,
-                }
-              - {
-                  label: Noindex,
-                  name: noindex,
-                  widget: boolean,
-                  required: false,
-                }
-
-      - file: 'content/pages/home.md'
-        label: 'Home Page'
-        name: 'home-page'
-        fields:
-          - {
-              label: Template,
-              name: template,
-              widget: hidden,
-              default: HomePage,
-            }
-          - { label: Slug, name: slug, widget: hidden, default: '' }
-          - { label: Title, name: title, widget: string }
-          - { label: Featured Image, name: featuredImage, widget: image }
-          - { label: Subtitle, name: subtitle, widget: markdown }
-          - { label: Body, name: body, widget: markdown }
-          - label: 'Accordion'
-            name: 'accordion'
-            widget: 'list'
-            required: false
-            fields:
-              - { label: 'Title', name: 'title', widget: 'string' }
-              - { label: Content, name: content, widget: text }
           - label: 'Meta'
             required: false
             name: 'meta'
