--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@reach/router": "^1.2.1",
     "date-fns": "^1.30.1",
     "dom-form-serializer": "^1.0.7",
+    "eslint-plugin-flowtype": "^4.3.0",
     "gatsby": "^2.0.97",
     "gatsby-image": "^2.0.27",
+    "gatsby-plugin-flow": "^1.1.5",
     "gatsby-plugin-html-attributes": "^1.0.5",
-    "gatsby-plugin-google-tagmanager": "^2.1.4",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.17",
@@ -42,7 +43,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-feather": "^2.0.3",
+    "react-feather": "^1.1.5",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
     "react-photoswipe": "^1.3.0"
@@ -62,7 +63,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "del-cli": "^2.0.0",
+    "del-cli": "^1.1.0",
     "prettier": "^1.16.1"
   }
 }
