--- a/package.json
+++ b/package.json
@@ -9,43 +9,51 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
     "date-fns": "^1.30.1",
     "dom-form-serializer": "^1.0.7",
-    "gatsby": "^2.15.28",
-    "gatsby-image": "^2.2.23",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "gatsby": "^2.0.97",
+    "gatsby-image": "^2.0.27",
+    "gatsby-plugin-flow": "^1.1.5",
     "gatsby-plugin-google-tagmanager": "^2.1.12",
-    "gatsby-plugin-manifest": "^2.2.20",
-    "gatsby-plugin-netlify": "^2.1.17",
+    "gatsby-plugin-html-attributes": "^1.0.5",
+    "gatsby-plugin-manifest": "^2.0.13",
+    "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.17",
-    "gatsby-plugin-nprogress": "^2.1.9",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-postcss": "^2.1.10",
-    "gatsby-plugin-react-helmet": "^3.1.10",
-    "gatsby-plugin-sass": "^2.1.17",
-    "gatsby-plugin-sharp": "^2.2.27",
-    "gatsby-plugin-sitemap": "^2.2.16",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-images": "^3.1.25",
-    "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-remark-responsive-iframe": "^2.2.20",
-    "gatsby-source-filesystem": "^2.1.28",
-    "gatsby-transformer-remark": "^2.6.26",
-    "gatsby-transformer-sharp": "^2.2.19",
-    "gatsby-transformer-yaml": "^2.2.12",
-    "google-map-react": "^1.1.5",
-    "lodash": "^4.17.15",
+    "gatsby-plugin-nprogress": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby-plugin-postcss": "^2.0.2",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.18",
+    "gatsby-plugin-sitemap": "^2.0.4",
+    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-relative-images": "^0.2.1",
+    "gatsby-remark-responsive-iframe": "^2.0.8",
+    "gatsby-source-filesystem": "^2.0.17",
+    "gatsby-source-instagram": "^0.5.1",
+    "gatsby-transformer-remark": "^2.2.0",
+    "gatsby-transformer-sharp": "^2.1.12",
+    "gatsby-transformer-yaml": "^2.1.7",
+    "google-map-react": "^1.1.2",
+    "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "modern-normalize": "^0.5.0",
-    "netlify-cms": "^2.9.7",
-    "node-sass": "^4.12.0",
-    "postcss-preset-env": "^6.7.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "react-feather": "^2.0.3",
-    "react-helmet": "^5.2.1",
-    "react-markdown": "^4.2.2",
-    "react-photoswipe": "^1.3.0"
+    "netlify-cms": "^2.3.3",
+    "node-sass": "^4.11.0",
+    "postcss-preset-env": "^6.5.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-feather": "^1.1.5",
+    "react-helmet": "^5.2.0",
+    "react-markdown": "^4.0.6",
+    "react-photoswipe": "^1.3.0",
+    "react-reveal": "^1.2.2",
+    "smooth-scroll": "^16.1.0"
   },
   "keywords": [
     "gatsby"
@@ -62,7 +70,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "del-cli": "^2.0.0",
-    "prettier": "^1.18.2"
+    "del-cli": "^1.1.0",
+    "eslint": "^6.5.0",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "^1.16.1"
   }
 }
