--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 # Override site url for using CMS in local development
-# NETLIFY_SITE_URL=https://yousitehere.netlify.com
+NETLIFY_SITE_URL=https://peaceful-ardinghelli-a05e84.netlify.com
+NODE_OPTIONS=--max_old_space_size=4096
