--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-plugin-sitemap": "^2.0.4",
+    "gatsby-plugin-smoothscroll": "^1.0.3",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-remark-responsive-iframe": "^2.0.8",
@@ -50,7 +51,8 @@
     "react-markdown": "^4.0.6",
     "react-photoswipe": "^1.3.0",
     "react-reveal": "^1.2.2",
-    "smooth-scroll": "^16.1.0"
+    "smooth-scroll": "^16.1.0",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "keywords": [
     "gatsby"
